# Noxura

./: .gitignore  CMakeLists.txt  LICENSE  README.md
references/learn-metal/: 00-window.cpp  01-primitive.cpp  02-argbuffers.cpp  03-animation.cpp  04-instancing.cpp  05-perspective.cpp  06-lighting.cpp  07-texturing.cpp  08-compute.cpp  09-compute-to-render.cpp  10-frame-debugging.cpp
references/old/: main.cpp
references/old/controls/: AppDelegate.cpp  AppDelegate.hpp  ViewDelegate.cpp  ViewDelegate.hpp
references/old/shaders/: triangle.metal
references/old/utils/: Dependencies.hpp
references/old/views/: Renderer.cpp  Renderer.hpp
src/: main.cpp
src/delegates/: AppDelegate.cpp  AppDelegate.hpp  ViewDelegate.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/shaders/: noxura.metal
src/utils/: Definitions.hpp  Dependencies.hpp
